KUBE/clusters/mac/lab/gateway/namespace-endr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: endr
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
