KUBE/clusters/mac/lab/gateway/route-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-gateway-route
  namespace: argocd
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: http
    - name: gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - "argocd.k8s.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
