KUBE/clusters/mac/lab/gateway/route-cloudflare-case.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-cloudflare-case
  namespace: endr
  annotations:
    argocd.argoproj.io/ignore-healthcheck: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-cloudflare
      namespace: gateway
  hostnames:
    - "case.calavelas.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: case
          port: 80
          weight: 1
