KUBE/clusters/mac/lab/gateway/route-endr-case.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: endr-case-route
  namespace: endr
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: http
    - name: gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - "case.k8s.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: endr-case
          port: 80
